Alteracao do CSS para Homologacao

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@
 body {
 	/* background-color: #383838; */
 	/* background-color: #5D81B1; */
-	/* Possivel uso para a UDTP #66CD00 */
-	background-color: #228B22;	
+	/* Possivel uso para a UDTP #66CD00 
+	* Uso em homologação: #228B22
+	*/
+	background-color: #FF3030;	
 	margin: 0; padding: 0;
 	font-size: small;
 	color: #383838;
