--- a/css/nav.css
+++ b/css/nav.css
@@ -12,12 +12,17 @@
 	/* background: url('images/nav/nav_bg.png') repeat-x; 
 	background-color: #5D81B1;
 	*/
-		background-color: #32CD32;
+		background-color: #FF3030;
+		/*#FF3030
+		*/
 	/* background: url('images/banner1.jpg') repeat-x; */
 	/*Chrome*/
 	/* background: -webkit-gradient(linear, left top, left bottom, from(#5D81B1), to(#5D81B1)) repeat-X; */
 
+	 /*Homologação
 	 background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#32CD32), to(#32CD32), color-stop(.6,#228B22));
+	 */
+	 background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF3030), to(#FF3030), color-stop(.6,#FF3030));
 
 	/*Mozila*/
 /*	background: -moz-linear-gradient(top, #666, #fff) repeat-X; */
@@ -42,9 +47,14 @@
 	/* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#666666), to(#666666), color-stop(.6,#333)); 
 	background: url("images/banner1.jpg"); */
 	
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#32CD32), to(#32CD32), color-stop(.6,#228B22));
+	/*
+		background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#32CD32), to(#32CD32), color-stop(.6,#228B22));
+	*/
 	
-	background-color: #32CD32;
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF3030), to(#FF3030), color-stop(.6,#FF3030));
+	
+	background-color: #FF3030;
+	/* Homologação: 	background-color: #32CD32;*/
 	float: left;
 	line-height: 42px;
 	height: 38px;
@@ -59,8 +69,12 @@
 
 	color: #CFCFCF;
 	/* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5D81B1), to(#5D81B1), color-stop(.6,#333)); */
+/*
+Homologação:
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#228B22), to(#228B22), color-stop(.6,#32CD32));
-	background-color: #32CD32;
+*/
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF3030), to(#FF3030), color-stop(.6,#FF3030));
+	background-color: #FF3030;
 	color: #E8E8E8;
 	/* background: #000 url('images/nav/nav_hover.png') repeat-x; */
 	}
