--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ body {
 	/* background-color: #383838; */
 	/* background-color: #5D81B1; */
 	/* Possivel uso para a UDTP #66CD00 
-	* Uso em homologação: #228B22
+	* Uso em homologação: #FF3030 
 	*/
-	background-color: #FF3030;	
+	background-color: #228B22;	
 	margin: 0; padding: 0;
 	font-size: small;
 	color: #383838;
