--- a/forms/login/view.css
+++ b/forms/login/view.css
@@ -1,8 +1,11 @@
 body
 {
+
+	background:#228B22;
+
 	/*Homologação 
-	background:#228B22; */
 	background:#FF3030;
+	*/
 	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
 	font-size:small;
 	margin:8px 0 16px;
@@ -74,7 +77,9 @@ form.appnitro
 /**** Logo Section  *****/
 h1
 {
-	background-color:#CD2626;
+	/*background-color:#CD2626; */
+	
+	background-color:#66CD00;
 	margin:0;
 	min-height:0;
 	padding:0;
